--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div id="left">
 			<div class="title">Write your Bug Report here:</div>
 			<textarea type="text" id="bug-report-area"></textarea>
-			<div id="footer">Bug Reporting 101 by Vazkii</div>
+			<div id="footer">Bug Reporting 101 by Vazkii - Fork it on <a href="https://github.com/Vazkii/br101">Github</a></div>
 		</div>
 		<div id="right">
 			<div id="step">Step <span id="step-counter">0</span></div>
