--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					</div>
 					<div id="why1" class="why">Are you in the latest version of Forge?</div>
 					<div id="why-expl1" class="why-expl">
-						Having the latest version of Forge is crucial to pointing out bugs. If you can reproduce an issue with an old version of Forge, but not with the latest version then it works fine. Old versions of Forge should be not be supported, as the new ones, more often than not, contain major bugfixes.
+						Having the latest version of Forge is crucial to pointing out bugs. If you can reproduce an issue with an old version of Forge, but not with the latest version then it works fine. Old versions of Forge should not be supported, as the new ones, more often than not, contain major bugfixes.
 					</div>
 					<div id="why2" class="why">Are you using vanilla Forge (not MCPC+)?</div>
 					<div id="why-expl2" class="why-expl">
